welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: ';' expected but 'return' found.
		else ((tea==candy*2 || candy==tea*2)) return 2
                                                      ^