welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
	if (tea<5 || candy<5) return 0
	else
		if (tea<5 && candy<5) return 1
		else ((tea==candy*2 || candy==tea*2)) return 2
		
}